--- a/app/(pages)/[year]/sibiu/page.module.scss
+++ b/app/(pages)/[year]/sibiu/page.module.scss
@@ -37,6 +37,19 @@
     width: 100%;
     margin-top:10px;
 
+  .category-title{
+    position:absolute;
+    bottom:36px;
+    left:43%;
+    border: 4px solid #000;
+    padding:0 10px;
+    background-color: #fff;
+    z-index:2;
+    font-size:36px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
     @media (max-width: 768px) {
         height: auto;
     }
@@ -51,7 +64,6 @@
     position:relative;
     float:left;
     width:100%;
-    height:600px;
     overflow: hidden;
     margin-top:30px;
     margin-bottom:30px;
