--- a/app/components/components-ui/expand-section.module.scss
+++ b/app/components/components-ui/expand-section.module.scss
@@ -11,18 +11,30 @@
       padding:30px;
       border-bottom:1px solid #000;
       &:hover{
-          background:#000;
-          color:#fff;
+          // background:#000;
+          // color:#fff;
         }
 
-      .question{
+      h3.question{
         width:100%;
-        
-        line-height: 50px;
-        padding:0 10px;
-        max-width:800px;
+        position:relative;
+        line-height: 30px;
+        padding:10px;
+        max-width:900px;
         margin: 0 auto;
 
+          &:after {
+            content: "";
+            color:inherit;
+            position: absolute;
+            transform: rotate(-45deg);
+            border-style: solid;
+            border-width: 0 4px 4px 0;
+            display: inline-block;
+            padding: 4px;
+            top: 15px;
+            right: 0px;
+        }
         
       }
 
@@ -30,13 +42,20 @@
         width:100%;
         display:none;
         padding:0 10px;
-        max-width:800px;
+        max-width:900px;
         margin: 0 auto;
+        text-align: justify;
 
       }
 
-      &.open .answer{
-        display:block;
+      &.open {
+        .question:after{
+          transform: rotate(45deg);
+        }
+        
+        .answer{
+          display:block;
+        }
       }
 
   }
