added team and about pages for mobile

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -80,7 +80,7 @@
             text-decoration: underline;
           }
 
-          span.icon-pdf-file{
+          span.svg-icon-pdf-file{
             background-color: rgb(255 255 255);
             float:left;
             color:inherit;
@@ -119,7 +119,7 @@
            width: 200px;
            margin-left: calc(50% - 100px);
 
-          span.icon-pdf-file{
+          span.svg-icon-pdf-file{
            
             height:30px;
             width:30px;
