--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -115,8 +115,20 @@
       width: 100%;
       height: 25%;
       pointer-events: none;
-      z-index: 99;
+      // z-index: 99;
       background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+
+  &.inner-shadow-top-size-30:before{
+      height: 30%;
+    }
+
+  &.inner-shadow-top-size-50:before{
+    height: 50%;
+  }
+
+  &.inner-shadow-top-value-30:before{
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(255, 255, 255, 0) 100%);
   }
 }
 
@@ -147,6 +159,8 @@
       background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
   }
 }
+
+
 
 
 
