--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -3,6 +3,7 @@
 @use '_nav' as *;
 
 @use '_utils' as *;
+@use '_utils-images' as *;
 @use '_inputs' as *;
 @use '_icons' as *;
 @use '_buttons' as *;
