--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -95,43 +95,43 @@
     @media (max-width: 768px) {
       div.section{
         width:100%;
-        // height: 50%;
-        // height: 50dvh;
         float:left;
-        // border: 12px solid #fff !important;
+
+        .go-button{
+          border: 3px solid #fff;
+          background: #00000082;
+          transform: rotate(180deg);
+          right: 30px;
+          height:60px;
+          width:60px;
+          position: absolute;
+          top: calc(50% - 30px);
+          padding: 8px;
+          .svg-icon{
+            background-color:#fff;
+          }
+        }
+
 
         &.section-sibiu{
           border-bottom: 1px solid #fff;
           height: calc(50dvh - 30px);
-;
-          // .download-pdf{
-          //   border: 2px solid #fff;
-          //   border-radius: 20px;
-          //   padding: 0 10px;
-          //   background: #00000069;
-          //   bottom:10px;
-          // }
         }
         &.section-valcea{
           border-top: 1px solid #fff;
           height: calc(50dvh - 30px);
-          // top: calc(50vh + 60px);
           bottom:0;
-        }
-
-        .oar{
-            width:120px;
-            height:45px;
-            margin: 0 auto;
-            top:15%;
         }
 
         .title{
             width: 150px;
             height: 110px;
+            width: 130px;
+            height: 70px;
             margin: 0 auto;
             top:24%;
-            top: calc(50% - 55px);
+            top: calc(50% - 35px);
+            margin-left: calc(50% - 100px);
 
         }
 
@@ -153,38 +153,76 @@
         }
 
       }
-
-      .logos{
-        position:relative;
+      div.section.section-logos{
         width: 100%;
-        top:0;
-        margin: 0 auto;
-        padding: 15px 10px;
+        height:60px;
         padding-bottom:5px;
         border-bottom: 2px solid #fff;
         background: rgb(0, 0, 0);
+        padding: 15px 0px;
 
-        .oar{
-            width:100px;
-            height: 35px;
-            margin-right:30px
-
-        }
-        .timbru{
-            width:80px;
-            height: 35px;
-            margin-left:10px;
-        }
-
-        .has-label:after{
+        .logos{
+          position:relative;
+          display: block;
+          width:340px;
+          top:0;
+          margin: 0 auto;
           
-              top:5px;
-              font-size:7px;
-            }
+          
 
+          a{margin-right:30px}
+          a:last-of-type{margin-right:0px}
+
+          .oar{
+              width:100px;
+              height: 35px;
+              
+
+          }
+          .timbru{
+              width:80px;
+              height: 35px;
+              margin-left:0px;
+          }
+
+          .has-label:after{
+            
+                top:-10px;
+                font-size:7px;
+              }
+
+        }
       }
     }
 
+
+    @media (max-width: 360px) {
+      div.section.section-logos{
+        padding-top:20px;
+        .logos{
+          width:260px;
+          a{margin-right:20px}
+          a:last-of-type{margin-right:0px}
+
+          .oar{
+              width:80px;
+              height: 28px;
+              
+
+          }
+          .timbru{
+              width:60px;
+              height: 28px;
+              margin-left:0px;
+          }
+
+          .has-label:after{
+                      font-size:6px;
+            }
+
+            }
+      }
+    }
 
    }
    
