--- a/app/styles/_icons.scss
+++ b/app/styles/_icons.scss
@@ -1,7 +1,7 @@
 
 .svg-icon{
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
   display: block;
   background-color: rgb(0, 0, 0);
   -webkit-mask-repeat: no-repeat;
