--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -12,6 +12,33 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
+        overflow:hidden;
+
+        canvas{position:absolute; top:0;z-index: -1;}
+
+        &.section-sibiu{
+          border-right: 2px solid #fff;
+        }
+        &.section-valcea{
+          border-left: 2px solid #fff;
+        }
+
+        .go-button{
+          border: 3px solid #fff;
+          background: #00000082;
+          transform: rotate(180deg);
+          right: 20%;
+          height:60px;
+          width:60px;
+          position: absolute;
+          top: calc(50% - 30px);
+          padding: 8px;
+          &:hover{background:#000;}
+
+          .svg-icon{
+            background-color:#fff;
+          }
+        }
 
         img{ z-index:-1;}
 
@@ -21,7 +48,9 @@
             height:160px;
             margin: 0 auto;
             top:40%;
-            position:relative;
+            top: calc(50% - 80px);
+            left: calc(50% - 220px);
+            position:absolute;
             background-repeat: no-repeat;
             background-position: center;
             background-size:contain;
@@ -30,16 +59,16 @@
 
         .download-pdf{
           color:#fff;
-          font-size:30px;
+          font-size:20px;
           line-height:50px;
-          text-decoration: none;
+          text-decoration: underline;
           text-transform: lowercase;
           position:relative;
           position:absolute;
-          bottom:50px;
-          width:300px;
+          bottom:30px;
+          width:3auto00px;
           margin:0 auto;
-          margin-left: calc(50% - 150px);
+          right:30px;
           
 
           &:hover{
@@ -129,9 +158,8 @@
             width: 130px;
             height: 70px;
             margin: 0 auto;
-            top:24%;
             top: calc(50% - 35px);
-            margin-left: calc(50% - 100px);
+            margin-left: calc(50% - 80px);
 
         }
 
