--- a/app/(pages)/[year]/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/(pages)/[year]/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -24,6 +24,15 @@
       }
 
     }
+
+    section.swiper-section-similar-projects{
+      float:left;
+      position:relative;
+      
+      height: 400px;
+      width: 100%;
+      margin-top:10px;
+    }
   
     section.info{
         
