--- a/app/components/components-server/footer-section.module.scss
+++ b/app/components/components-server/footer-section.module.scss
@@ -6,6 +6,7 @@
 
     .footer-section {
       width: 100%;
+      position:relative;
       background: #000;
       float: left;
       padding-top: 30px;
