--- a/app/components/components-server/see-map-section.module.scss
+++ b/app/components/components-server/see-map-section.module.scss
@@ -2,11 +2,6 @@
 .namespace-container{
     width:100%;
     float:left;
-    
-    // overflow: hidden;
-    float:left;
-    // margin-top:30px;
-    // margin-bottom:30px;
     overflow: hidden;
 
     :global{
@@ -15,23 +10,37 @@
         margin-top:0px;
         margin-bottom:0px;
         height:500px;
-        &:before{
-            content:'';
-            box-sizing: border-box;
-            width:calc(100% + 10px);
-            height:calc(100% + 10px);
-            position:absolute;
-            top:-5px;
-            left:-5px;
-            background: #000000;
-            z-index:999;
-            opacity:0;
-            transition: opacity 0.15 step-end;
-            pointer-events:none;
-          }
-        &:hover:before{
-          opacity:0.05;
 
+        h6{
+          font-size: 150px;
+          line-height: 165px;
+          position:absolute;
+          margin:0;
+          width:100%;
+          text-align:center;
+          text-transform: uppercase;
+          color:#fff;
+          z-index:1;
+          margin:0;
+          margin-top: 20px;
+        }
+
+        .go-button{
+          border: 6px solid #fff;
+          background: #00000082;
+          transform: rotate(180deg);
+          bottom: 35px;
+          height:90px;
+          width:90px;
+          position: absolute;
+          left: calc(50% - 45px);
+          padding: 8px;
+          z-index:1;
+          &:hover{background:#000;}
+
+          .svg-icon{
+            background-color:#fff;
+          }
         }
 
         @media (max-width: 1200px) {
@@ -40,9 +49,6 @@
 
         @media (max-width: 768px) {
 
-            // width:calc(100% + 48px);
-            // left:-24px;
-            // height: 40vw;
           }
 
           @media (max-width: 400px) {
