--- a/app/components/components-server/team-section.module.scss
+++ b/app/components/components-server/team-section.module.scss
@@ -27,8 +27,6 @@
           float:left;
 
         .portrait{
-          // width:200px;
-          // height:200px;
           float:left;
           position:relative;
           width:100%;
@@ -71,6 +69,8 @@
 
 @media (max-width: 1400px) {height: 500px;}
 @media (max-width: 1100px) {height: 450px;}
+@media (max-width: 768px) {height: auto;}
+
 
 :global{
 
@@ -143,16 +143,82 @@
       }
 
       @media (max-width: 768px) {
-          .col-members{
 
+          .col-title{
+            width:100%;
+            height:auto;
+            font-size: 150px;
+            text-align:center;
+            font-weight:bold;
+            margin: 60px 0;
+            overflow:hidden;
+
+          }
+          .col-members{
+            width:100%;
+            max-width:520px;
+            margin:0 auto;
+            left: calc(50% - 260px);
+            position:relative;
             .member{
-              // width: 200px;
-              // height: 300px;
+              width:200px;
+              height:300px;
+              margin:0px 30px;
+
+              .portrait.placeholder{
+                width:160px;
+                height:160px;
+                margin:20px;
+              }
+              .name{ font-size: 16px;}
+              .role{font-size: 13px;}
             }
           }
       }
+
+      @media (max-width: 600px) { .col-title{font-size: 130px;} }
+
+      @media (max-width: 520px) {
+          .col-title{font-size: 130px;}
+          .col-members{
+              max-width: 260px;
+              left: calc(50% - 130px);
+          }
+
+      }
+
+      @media (max-width: 480px) {
+          .col-title{font-size: 180px; line-height:170px;}
+          .row-2{letter-spacing: 16px;}
+      }
+
+      @media (max-width: 400px) {
+          .col-title{font-size: 160px; line-height:150px;}
+          .row-2{letter-spacing: 14px;}
+      }
   }
     
-}
+}.namespace-container.size-9-12 { height: 900px; 
+@media (max-width: 1400px) {height: 760px;}
 
- .namespace-container.size-9-12 { height: 900px; }
+:global{
+
+    .col-members{ max-width: 1040px; }
+
+      @media (max-width: 1400px){
+
+            .member{
+              width: 165px;
+              height: 247px;
+              margin: 10px;
+
+              .portrait.placeholder{
+                width: 120px;
+                height: 120px;
+              }
+            }
+            
+          }
+
+        }
+}
