--- a/app/(pages)/[year]/valcea/page.module.scss
+++ b/app/(pages)/[year]/valcea/page.module.scss
@@ -17,41 +17,56 @@
     color: #000 !important;
     text-transform: uppercase;
     margin-top:10px;
+    overflow:hidden;
+
+    @media (max-width: 320x) {
+        font-size:40px;
+    }
   }
+
 
   section{
     position:relative;
   }
 
-    section.swiper-section{
+  section.swiper-section{
+    float:left;
+    position:relative;
+    
+    height: 400px;
+    width: 100%;
+    margin-top:10px;
+
+  .category-title{
+    position:absolute;
+    bottom:36px;
+    left:43%;
+    border: 4px solid #000;
+    padding:0 10px;
+    background-color: #fff;
+    z-index:2;
+    font-size:36px;
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+    @media (max-width: 768px) {
+        height: auto;
+
+      .category-title{
+        font-size: 18px;
+        left:20px;
+        bottom:unset;
+        top:20px;
+      }
+    }
+
+  }
+
+  section.mission-section{
       float:left;
-      position:relative;
-      
-      height: 400px;
-      width: 100%;
-      margin-top:10px;
-
-      @media (max-width: 768px) {
-          height: auto;
-      }
-
     }
 
-    section.mission-section{
-        float:left;
-      }
-
-      section.team-section{
-        position:relative;
-        float:left;
-        width:100%;
-        height:600px;
-        overflow: hidden;
-        margin-top:30px;
-        margin-bottom:30px;
-
-      }
-  
-    }
+  }
 
 }
