--- a/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -25,14 +25,26 @@
 
     }
 
+
+
     section.swiper-section-similar-projects{
       float:left;
       position:relative;
+      height:440px;
       
-      height: 400px;
       width: 100%;
-      margin-top:10px;
     }
+
+    h6.section-title-similar-projects{
+        position:relative;
+        float: left;
+        width:100%;
+        text-align:center;
+        font-size:50px;
+        line-height:100px;
+        margin:0;
+        color: #000;
+      }
   
     section.info{
         
