change dvh to svh for cover

--- a/app/components/components-server/cover-section.module.scss
+++ b/app/components/components-server/cover-section.module.scss
@@ -1,7 +1,7 @@
 .cover-section{
     background-size: cover;
     background-position: center;
-    height: calc(100dvh - 40px);
+    height: calc(100svh - 40px);
     width: 100%;
     position:relative;
 
