--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -32,32 +32,37 @@
   section.swiper-section{
     float:left;
     position:relative;
-    
+    text-align: center;
     height: 400px;
     width: 100%;
     margin-top:10px;
 
   .category-title{
-    position:absolute;
-    bottom:36px;
-    left:43%;
+    position:relative;
+    display: inline-block;
+    bottom:60px;
+
     border: 4px solid #000;
     padding:0 10px;
     background-color: #fff;
     z-index:2;
-    font-size:36px;
+    font-size:30px;
     font-weight: 600;
     text-transform: uppercase;
+    
   }
 
     @media (max-width: 768px) {
         height: auto;
 
       .category-title{
-        font-size: 18px;
-        left:20px;
-        bottom:unset;
-        top:20px;
+        font-size: 14px;
+        right: 10px;
+        bottom: unset;
+        top: 10px;
+        position: absolute;
+        border: 4px solid #cefb08;
+        background: #cefb08;
       }
     }
 
