--- a/sanity/components/contact-oar-input.module.scss
+++ b/sanity/components/contact-oar-input.module.scss
@@ -14,7 +14,8 @@
 
           .label{
                 text-transform:none;
-                height:12px;
+                height: 14px;
+                font-size:12px;
           }
 
            input, select{
