added signup form and buttons on projects

--- a/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
+++ b/app/(pages)/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
@@ -14,7 +14,7 @@
         height: 300px;
 
         .swiper-pagination {
-          bottom:20px;
+          bottom:20px !important;
           .swiper-pagination-bullet{
             width: 12px;
             height: 12px;
