--- a/app/components/swiper/swiper-component.module.scss
+++ b/app/components/swiper/swiper-component.module.scss
@@ -6,7 +6,7 @@
 :global{
 
     .swiper-pagination {
-      bottom:60px;
+      bottom:60px !important;
           .swiper-pagination-bullet{
               
               width:16px;
