--- a/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
@@ -79,12 +79,9 @@
           .swiper-pagination-bullet{
               width: 12px;
               height: 12px;
-              background:  #fff;
+              background:  #0c0a00;
               opacity:1;
 
-              // &.swiper-pagination-bullet-active{
-              //   background:  #cefb08;
-              // }
           }
 
     }
