--- a/app/components/swiper/swiper-responsive/swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/swiper-projects.module.scss
@@ -70,7 +70,7 @@
 
 
     .swiper-pagination {
-      bottom:60px;
+      bottom:60px !important;
           .swiper-pagination-bullet{
               width:16px;
               height:16px;
