--- a/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -11,19 +11,56 @@
       height: calc(100vh - 40px);
       width: 100%;
 
-      @media (max-width: 768px) {
-        height: 300px;
+    }
 
-        .swiper-pagination {
-          bottom:20px;
-          .swiper-pagination-bullet{
-            width: 12px;
-            height: 12px;
+     #signup{
+        display: block;
+        position:absolute;
+        bottom:50px;
+        right:100px;
+        z-index: 9;
+        color:#000000;
+        border-color: #000000 !important;
+        overflow:hidden;
+
+        &:hover{
+
+          &:after{
+            content:"";
+            position:absolute;
+            top:0;
+            left:0;
+            width:100%;
+            height:100%;
+            background: #000;
+            opacity:0.2;
+
           }
+          
         }
       }
 
-    }
+      @media (max-width: 768px) {
+        section.swiper-section{
+          height: 300px;
+          .swiper-pagination {
+            bottom:20px !important;
+            .swiper-pagination-bullet{
+              width: 12px;
+              height: 12px;
+            }
+          }
+        }
+        #signup{
+          position: relative;
+          top:unset;
+          left:unset;
+          bottom:unset;
+          right:unset;
+          margin-top:30px;
+
+        }
+      }
 
 
 
@@ -58,7 +95,7 @@
           border-bottom: 1px solid #333;
         }
         .col{
-          
+          position:relative;
           float:left;
 
           span.label{
