--- a/app/components/components-server/cover-section.module.scss
+++ b/app/components/components-server/cover-section.module.scss
@@ -57,16 +57,20 @@
 
     }
 
-    #signup{
+    #main-actions{
       z-index: 9;
       position: absolute;
       float: left;
       bottom: 10%;
+      width:100%;
+      text-align: center;
+      margin:0 auto;
+
 
       a.btn{
+        display: inline-block;
         position:relative;
-        margin-left:auto;
-        margin-right:auto;
+        margin: 0 10px;
         letter-spacing:2px;
       }
     }
@@ -76,7 +80,8 @@
 
       .logo{display:none;}
       .event-title{
-             font-size:150px;
+        top:30%;
+        font-size:150px;
        }
 
       .event-date{
@@ -115,18 +120,34 @@
       }
 
       .event-date{
-        font-size:30px;
-        top:70%;
+        top:unset;
+        bottom:100px;
+      }
+
+      #main-actions{
+        bottom: 40px;
+        padding: 0 30px;
+
+        a.btn{
+          margin-top:10px;
+          text-align: center;
+          width: 180px;
+          height: 40px;
+          line-height: 36px;
+          font-size:18px;
+
+
+          &:first-of-type{margin-top:0;}
+        }
       }
   }
 
-  @media (max-width: 540px) {
+  @media (max-width: 600px) { .event-date{ font-size:30px;} }
 
-      .event-date{
-        font-size:22px;
-        text-shadow: 0px 0px 40px rgb(0 0 0);
-      }
-  }
+  @media (max-width: 460px) { .event-date{ bottom:150px;} }
+
+
+  @media (max-width: 370px) { .event-date{ font-size:22px; text-shadow: 0px 0px 40px rgb(0 0 0); } }
 
  }
 }
