--- a/app/components/components-server/team-section.module.scss
+++ b/app/components/components-server/team-section.module.scss
@@ -6,6 +6,8 @@
 
   :global{
 
+    .col-members{overflow: hidden;}
+
     .team-section-container.mobile-version{
 
       height: auto !important;
@@ -17,11 +19,22 @@
               margin:0px 30px;
               float:left;
 
+              .member-image{
+                  border-radius:50%;
+                  position:relative;
+                  width:100%;
+                  height:200px;
+                  overflow: hidden;
+                  border-radius: 50%;
+                }
+
+
               .portrait.placeholder{
-                width:160px;
-                height:160px;
-                margin:20px;
+                  width:160px;
+                  height:160px;
+                  margin:20px;
               }
+            
 
               .name{
                 float:left;
@@ -106,6 +119,14 @@
             margin:0px 30px;
             float:left;
 
+          .member-image{
+            border-radius:50%;
+            position:relative;
+            width:100%;
+            height:200px;
+            overflow: hidden;
+            border-radius: 50%;
+          }
           .portrait{
             float:left;
             position:relative;
