--- a/app/components/google-maps/google-map.module.scss
+++ b/app/components/google-maps/google-map.module.scss
@@ -17,6 +17,8 @@
         transition: opacity 0.5s ease-in-out;
         border:3px solid;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        max-width: 140px;
+
         &:after{
             content:'';
             box-sizing: border-box;
@@ -53,14 +55,13 @@
       color: #000;
       font-size: 13px;
       text-decoration: none;
-      white-space: nowrap;
+      .text-inner{
+
+      }
     }
 
     .markerImage {
-      width: 150px;
-      height: 80px;
-
-      width: 130px;
+      width: 100%;
       height: 130px;
       position:relative;
     }
@@ -68,10 +69,10 @@
     .marker-arrow {
       width: 0;
       height: 0;
-      border-left: 8px solid transparent;
-      border-right: 8px solid transparent;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;
       margin: 0 auto;
-      left: calc(50% - 8px);
+      left: calc(50% - 12px);
       position: absolute;
     }
   }
