--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -80,6 +80,10 @@
   text-transform: uppercase;
 }
 
+.font-size-30{
+  font-size: 30px !important;
+}
+
 .font-size-45{
   font-size: 45px !important;
 }
