--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -37,25 +37,29 @@
     width: 100%;
     margin-top:10px;
 
-  .category-title{
-    position:relative;
-    display: inline-block;
-    bottom:60px;
-
-    border: 4px solid #000;
-    padding:0 10px;
-    background-color: #fff;
-    z-index:2;
-    font-size:30px;
-    font-weight: 600;
-    text-transform: uppercase;
-    
-  }
-
     @media (max-width: 768px) {
         height: auto;
 
-      .category-title{
+      
+    }
+
+  }
+
+    .category-title{
+        position:relative;
+        display: inline-block;
+        bottom:60px;
+
+        border: 4px solid #000;
+        padding:0 10px;
+        background-color: #fff;
+        z-index:2;
+        font-size:30px;
+        font-weight: 600;
+        text-transform: uppercase;
+        
+     @media (max-width: 768px) {
+      
         font-size: 14px;
         right: 10px;
         bottom: unset;
@@ -63,10 +67,11 @@
         position: absolute;
         border: 4px solid #cefb08;
         background: #cefb08;
-      }
-    }
-
+      
+     }
+    
   }
+
 
   section.mission-section{
       float:left;
@@ -96,7 +101,7 @@
           border: 4px solid #cefb08;
           background-color: #cefb08;
 
-          &.odd {
+          &.title-right {
             left: unset;
             right: 0;
             transform-origin: top right;
