--- a/app/components/components-server/event-section.module.scss
+++ b/app/components/components-server/event-section.module.scss
@@ -1,13 +1,32 @@
 
 .namespace-container{
     width:100%;
-    
     overflow: hidden;
     float:left;
+    position:relative;
+    margin-bottom: 10px;
     // margin-top:30px;
     // margin-bottom:30px;
 
     :global{
+
+      .category-title{
+        z-index: 999;
+        bottom: -90px !important;
+        height: 70px !important;
+        line-height: 70px !important;
+        width: 870px !important;
+        font-size: 50px !important;
+        text-align: center;
+        background-color: #000000 !important;
+        border: none !important;
+         &.title-right {
+            left: unset;
+            right: 0;
+            transform-origin: top right;
+            transform: rotate(90deg);
+          }
+      }
 
      .event-section{
           float:left;
@@ -21,7 +40,13 @@
             position:relative;
             border-top: 1px solid #666;
             border-bottom: 1px solid #666;
+            border-color: #666 !important;
             margin-bottom: 10px;
+            padding: 0 70px;
+
+            &:last-of-type{
+              margin-bottom: 0px;
+            }
 
             .col{
               position:relative;
@@ -31,15 +56,19 @@
               text-align: justify;
               text-justify: inter-word;
 
-              // .title-link{
-              //   text-decoration: none;
-                h6{
-                  margin:0;
-                  font-size:20px;
-                  color:black !important;
-                  text-decoration: none;
-                }
-              // }
+              .col-inner{
+                position:relative;
+                width:100%;
+                height:100%;
+              }
+             
+              h6{
+                margin:0;
+                font-size:20px;
+                color:black !important;
+                text-decoration: none;
+              }
+              
 
               &.col-image{
                   height:100%;
@@ -47,7 +76,11 @@
               }
 
               &.col-description{
-                padding:40px;
+                background:#fff;
+                color:#000;
+                .col-inner{
+                  padding:40px;
+                }
 
                 a.btn{
                   color: #000;
@@ -58,7 +91,7 @@
               }
 
               &.col-title{
-                padding:40px;
+                .col-inner{padding:40px;}
                 .title{
                   font-size: 28px;
                 }
@@ -66,6 +99,16 @@
                 .subtitle{
                   margin-top:10px;
                   font-size: 18px;
+                }
+
+                .btn{
+                  color: #000;
+                  border-color:#000 !important;
+                  position:absolute;
+                  bottom:35px;
+                  &:hover{
+                      background:#fff;
+                  }
                 }
 
               }
@@ -89,9 +132,31 @@
             }
 
           }
+
+          // .event{
+          //   .col-description .col-inner{width:calc(100% + 70px);}
+
+          //   &.odd{ .col-1.col-image .col-inner{width:calc(100% + 70px); }}
+          // }
+
         }
 
+      .event-section:not(.title-right){
+        .event.odd{
+          background-color: #fff;
+        }
+      }
+      .event-section.title-right{
+        .event:not(.odd){
+          background-color: #fff;
+        }
+      }
+
       @media (max-width: 768px) {
+          .category-title{
+            display:none;
+          }
+
           .event-section{
               background: #ffffff;
               padding-top: 10px;
@@ -100,6 +165,7 @@
               margin-bottom:10px;
               height:auto;
               border:none;
+              padding: 0;
               &:last-of-type{margin-bottom:0px;}
 
                 .col{
@@ -115,19 +181,26 @@
                   }
 
                   &.col-title{
-                    padding:20px;
-                    // border-top: 1px solid #666 !important;
-                    // border-bottom: 1px solid #666 !important;
-                      .title{
-                        font-size:23px;
-                        text-align:center;
-                      }
-                      .subtitle{
-                        margin-top:5px;
-                        font-size:14px;
-                        text-align:center;
-                      }
-                    
+                    .col-inner{
+                      padding:20px;
+                      // border-top: 1px solid #666 !important;
+                      // border-bottom: 1px solid #666 !important;
+                        .title{
+                          font-size:23px;
+                          text-align:center;
+                        }
+                        .subtitle{
+                          margin-top:5px;
+                          font-size:14px;
+                          text-align:center;
+                        }
+
+                        .btn{
+                          position: relative;
+                          bottom: unset;
+                          margin: 0 auto;margin-top:10px;
+                        }
+                    }
                   }
               }
 
