added slider interval in sanity

--- a/app/components/google-maps/google-map.module.scss
+++ b/app/components/google-maps/google-map.module.scss
@@ -9,6 +9,13 @@
   :global{
 
     
+  .gm-style{
+    div[style*='touch-action'][style*="pan-x"][style*="pan-y"] {
+          background: linear-gradient(180deg, rgba(0, 0, 0, 0.56) 0%, rgba(255, 255, 255, 0) 50%, rgba(255, 255, 255, 0) 100%);
+    }
+
+  }
+
       .marker-container {
         cursor: pointer;
         text-align: center;
@@ -55,9 +62,7 @@
       color: #000;
       font-size: 13px;
       text-decoration: none;
-      .text-inner{
-
-      }
+ 
     }
 
     .markerImage {
