--- a/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
+++ b/app/(pages)/(main)/[sibiu-valcea]/page.module.scss
@@ -24,6 +24,34 @@
     }
   }
 
+   .event-title-on-mobile{
+    position:relative;
+    line-height:100px;
+    float:left;
+    width:100%;
+    font-weight: bold;
+    text-align: center;
+    background: #000;
+    text-transform: uppercase;
+    overflow:hidden;
+    font-size:50px;
+
+    @media (max-width: 320x) {
+        font-size:40px;
+    }
+
+    &.event-title-kids-workshop{
+      font-size:60px;
+      @media (max-width: 640px) {font-size:55px;}
+      @media (max-width: 580px) {font-size:50px;}
+      @media (max-width: 520px) {font-size:45px;}
+      @media (max-width: 480px) {font-size:40px;}
+      @media (max-width: 420px) {font-size:35px;}
+      @media (max-width: 360px) {font-size:30px;}
+      @media (max-width: 320px) {font-size:27px;}
+    }
+  }
+
 
   section{
     position:relative;
