--- a/sanity/components/section-names-input.module.scss
+++ b/sanity/components/section-names-input.module.scss
@@ -4,10 +4,17 @@
     
     overflow: hidden;
     float:left;
-    margin-top:30px;
-    margin-bottom:30px;
+    // margin-top:30px;
+    margin-bottom:30px !important;
+    flex-direction: column !important;
 
     :global{
+
+        .label-large{
+            margin-top:50px;
+            font-size:18px;
+        }
+
 
         .box{
           margin-top:20px;
